--- a/website/templates/main/normal.html
+++ b/website/templates/main/normal.html
@@ -1,36 +1,25 @@
 {% extends 'layout/master.html' %}
 {% load staticfiles %}
 {% block contents %}
+
+<div class="breadcrumb">
+    <div class="container">
+        <div class="breadcrumb-inner">
+            <ul class="list-inline list-unstyled">
+                <li><a href="/">Home</a></li>
+                <li><a href="#"> {% if blog_detail %}
+                    {{blog_detail.caption}}
+                {% else %}
+                    {{about.caption}}
+                {% endif %}</a></li>
+            </ul>
+        </div><!-- /.breadcrumb-inner -->
+    </div><!-- /.container -->
+</div><!-- /.breadcrumb -->
+
+
 <div class="hm_home_style1 hm_home_style3">
     <!--menu start-->
-   
-<!--banner start-->
-<div class="hm_bread_wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12">
-                <h1>
-                    {% if blog_detail %}
-                        {{blog_detail.title}}
-                    {% else %}
-                        {{about.title}}
-                    {% endif %}
-                </h1>
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item"><a href="/blog">Blog</a></li>
-                    <li class="breadcrumb-item active">
-                        {% if blog_detail %}
-                            {{blog_detail.title}}
-                        {% else %}
-                            {{about.title}}
-                    {% endif %}
-                    </li>
-                </ol>
-            </div>
-        </div>
-    </div>
-</div>
 
 {% if blog_detail %}
 <!--blog section start-->
@@ -61,7 +50,7 @@
     </div>
 {% else %}
 <!--blog section start-->
-    <div class="hm_news_wrapper">
+    {% comment %} <div class="hm_news_wrapper">
         <div class="container">
 
             <div class="hm_news_inner hm_blogs hm_single_blog">
@@ -86,7 +75,48 @@
                 </div>
             </div>
 
-        </div>
+        </div> {% endcomment %}
+        
+    <div class="body-content">
+        <div class="container">
+            <div class="checkout-boxx ">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="about-page-area">
+                                {{about.short_description|safe}}
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <br>
+                            <div class="about-page-img-area">
+                                <img src="{{about.banner_image1.url}}" alt="">
+
+                            </div>
+                        </div>
+                    </div>
+                </div> <br>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <br>
+                            <div class="about-page-img-area">
+                                <img src="{{about.banner_image2.url}}" alt="">
+
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="about-page-area">
+                                {{about.long_contents|safe}}
+
+                            </div>
+                        </div>
+                    </div>
+                  
+                </div><!-- /.row -->
+            </div><!-- /.checkout-box -->
+        </div><!-- /.container -->
+    </div>
 {% endif %}
 {% endblock %}
 
