--- a/website/templates/partials/main.html
+++ b/website/templates/partials/main.html
@@ -26,7 +26,7 @@
                           <div class="col-sm-12 col-md-3">
                             <ul class="links list-unstyled">
                               {% for products in categorie.product.all %}
-                                <li><a href="brand.html">{{products.name}}</a></li>
+                                <li><a href="/product-details/{{products.id}}">{{products.name}}</a></li>
                               {% endfor %}
                             </ul>
                           </div>
@@ -59,7 +59,7 @@
                   <div class="products">
                     <div class="hot-deal-wrapper">
                       <div class="image">
-                        <a href="#">
+                        <a href="/product-details/{{best_prod.id}}">
                           <img src="{{ best_prod.image1.url }}" alt="">
                           <img src="{{ best_prod.image2.url }}" alt="" class="hover-image">
                         </a>
@@ -84,7 +84,7 @@
                     <!-- /.hot-deal-wrapper -->
 
                     <div class="product-info text-left m-t-20">
-                      <h3 class="name"><a href="#">{{best_prod.name}}
+                      <h3 class="name"><a href="/product-details/{{best_prod.id}}">{{best_prod.name}}
                         </a></h3>
                       <div class="rating rateit-small"></div>
                       <div class="product-price"> <span class="price"> Rs.{{ best_prod.price|sub:best_prod.discount }} </span> 
@@ -141,7 +141,7 @@
                           <div class="row product-micro-row">
                             <div class="col col-xs-5">
                               <div class="product-image">
-                                <div class="image"> <a href="#"> <img src="{{ so.image1.url }}" alt="">
+                                <div class="image"> <a href="/product-details/{{so.id}}"> <img src="{{ so.image1.url }}" alt="">
                                   </a>
                                 </div>
                                 <!-- /.image -->
@@ -152,7 +152,7 @@
                             <!-- /.col -->
                             <div class="col col-xs-7">
                               <div class="product-info">
-                                <h3 class="name"><a href="#">{{ so.name }}</a></h3>
+                                <h3 class="name"><a href="/product-details/{{so.id}}">{{ so.name }}</a></h3>
                                 <div class="rating rateit-small"></div>
                                 <div class="product-price"> <span class="price">Rs.{{ so.price|sub:so.discount }}</span> </div>
                                 <!-- /.product-price -->
@@ -202,7 +202,7 @@
                         <div class="row product-micro-row">
                           <div class="col col-xs-5">
                             <div class="product-image">
-                              <div class="image"> <a href="#"> <img src="{{sd.image1.url}}" alt=""> </a>
+                              <div class="image"> <a href="/product-details/{{sd.id}}"> <img src="{{sd.image1.url}}" alt=""> </a>
                               </div>
                               <!-- /.image -->
 
@@ -212,7 +212,7 @@
                           <!-- /.col -->
                           <div class="col col-xs-7">
                             <div class="product-info">
-                              <h3 class="name"><a href="#">{{ sd.name }}</a></h3>
+                              <h3 class="name"><a href="/product-details/{{sd.id}}">{{ sd.name }}</a></h3>
                               <div class="rating rateit-small"></div>
                               <div class="product-price"> <span class="price">Rs.{{ sd.price|sub:sd.discount }}</span> </div>
                               <!-- /.product-price -->
@@ -336,7 +336,7 @@
                             <!-- /.product-image -->
 
                             <div class="product-info text-left">
-                              <h3 class="name"><a href="detail.html">{{ prod.name }}
+                              <h3 class="name"><a href="/product-details/{{prod.id}}">{{ prod.name }}
                                 </a></h3>
                               <div class="rating rateit-small"></div>
                               <div class="description"></div>
@@ -361,7 +361,7 @@
                                     <button class="btn btn-primary cart-btn" type="button">Add to cart</button>
                                   </li>
                                   <li class="lnk wishlist"> <a data-toggle="tooltip" class="add-to-cart"
-                                      href="my-wishlist.html" title="Wishlist"> <i class="icon fa fa-heart"></i> </a>
+                                      href="{% url "WishList" p_id=prod.id %}" title="Wishlist"> <i class="icon fa fa-heart"></i> </a>
                                   </li>
                                   <li class="lnk"> <a data-toggle="tooltip" class="add-to-cart" href="#" title="link">
                                       <i class="fa fa-link" aria-hidden="true"></i> </a> </li>
@@ -1078,7 +1078,7 @@
                           <div class="product">
                             <div class="product-image">
                               <div class="image">
-                                <a href="#">
+                                <a href="/product-details/{{dotw.id}}">
                                   <img src="{{dotw.image1.url}}" alt="">
                                   <img src="{{dotw.image2.url}}" alt="" class="hover-image">
                                 </a>
@@ -1090,7 +1090,7 @@
                             <!-- /.product-image -->
 
                             <div class="product-info text-left">
-                              <h3 class="name"><a href="#">{{dotw.name}}
+                              <h3 class="name"><a href="/product-details/{{dotw.id}}">{{dotw.name}}
                                 </a></h3>
                               <div class="rating rateit-small"></div>
                               <div class="description"></div>
@@ -1162,7 +1162,7 @@
                           <div class="product">
                             <div class="product-image">
                               <div class="image">
-                                <a href="#">
+                                <a href="/product-details/{{cam.id}}">
                                   <img src="{{cam.image1.url}}" alt="">
                                   <img src="{{cam.image2.url}}" alt="" class="hover-image">
                                 </a>
@@ -1174,7 +1174,7 @@
                             <!-- /.product-image -->
 
                             <div class="product-info text-left">
-                              <h3 class="name"><a href="detail.html">{{cam.name}}
+                              <h3 class="name"><a href="/product-details/{{cam.id}}">{{cam.name}}
                                 </a></h3>
                               <div class="rating rateit-small"></div>
                               <div class="description"></div>
@@ -1246,7 +1246,7 @@
                           <div class="product">
                             <div class="product-image">
                               <div class="image">
-                                <a href="detail.html">
+                                <a href="/product-details/{{dp.id}}">
                                   <img src="{{dp.image1.url}}" alt="">
                                   <img src="{{dp.image2.url}}" alt="" class="hover-image">
                                 </a>
@@ -1258,7 +1258,7 @@
                             <!-- /.product-image -->
 
                             <div class="product-info text-left">
-                              <h3 class="name"><a href="detail.html">{{dp.name}}</a></h3>
+                              <h3 class="name"><a href="/product-details/{{dp.id}}">{{dp.name}}</a></h3>
                               <div class="rating rateit-small"></div>
                               <div class="description"></div>
                               <div class="product-price"> <span class="price"> Rs.{{ dp.price|sub:dp.discount }} </span> 
@@ -1329,7 +1329,7 @@
                           <div class="product">
                             <div class="product-image">
                               <div class="image">
-                                <a href="detail.html">
+                                <a href="/product-details/{{mo.id}}">
                                   <img src="{{mo.image1.url}}" alt="">
                                   <img src="{{mo.image2.url}}" alt="" class="hover-image">
                                 </a>
@@ -1341,7 +1341,7 @@
                             <!-- /.product-image -->
 
                             <div class="product-info text-left">
-                              <h3 class="name"><a href="detail.html">{{mo.name}}
+                              <h3 class="name"><a href="/product-details/{{mo.id}}">{{mo.name}}
                                 </a></h3>
                               <div class="rating rateit-small"></div>
                               <div class="description"></div>
